; ModuleID = '/home/carl/AnghaBench/linux/tools/lib/bpf/extr_libbpf.c_bpf_program__identify_section.c'
source_filename = "/home/carl/AnghaBench/linux/tools/lib/bpf/extr_libbpf.c_bpf_program__identify_section.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bpf_program = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bpf_program*, i32*, i32*)* @bpf_program__identify_section to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bpf_program__identify_section(%struct.bpf_program* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.bpf_program*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.bpf_program* %0, %struct.bpf_program** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.bpf_program*, %struct.bpf_program** %4, align 8
  %8 = getelementptr inbounds %struct.bpf_program, %struct.bpf_program* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @libbpf_prog_type_by_name(i32 %9, i32* %10, i32* %11)
  ret i32 %12
}

declare dso_local i32 @libbpf_prog_type_by_name(i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
